// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dynamodb resolvers something 1`] = `
{
  "filter": {
    "expression": "#shift = :shift",
    "expressionNames": {
      "#shift": "shift",
    },
    "expressionValues": {
      ":shift": {
        "N": 10,
      },
    },
  },
  "index": "nameIndex",
  "operation": "Query",
  "query": {
    "expression": "#name = :name",
    "expressionNames": {
      "#name": "name",
    },
    "expressionValues": {
      ":name": {
        "S": "test",
      },
    },
  },
  "select": "ALL_ATTRIBUTES",
}
`;

exports[`dynamodb resolvers something 2`] = `
[
  {
    "a": 10,
  },
]
`;

exports[`rds resolvers mysql insert 1`] = `
{
  "statements": [
    "INSERT INTO \`persons\` (\`name\`) VALUES (:P0)",
  ],
  "variableMap": {
    ":P0": "test",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers mysql raw string 1`] = `
{
  "statements": [
    "UPDATE "document" set "data" = 10 WHERE id = adb626eb-4ce5-452a-a917-3943a37f202b",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers mysql remove 1`] = `
{
  "statements": [
    "DELETE FROM \`persons\` WHERE \`id\` = :P0",
  ],
  "variableMap": {
    ":P0": "1232",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers mysql select 1`] = `
{
  "statements": [
    "SELECT \`id\`, \`name\` FROM \`UserGroup\` WHERE (\`name\` = :P0) OR (\`id\` > :P1) ORDER BY \`name\` ASC, \`id\` DESC LIMIT :P2 OFFSET :P3",
  ],
  "variableMap": {
    ":P0": "Stephane",
    ":P1": 10,
    ":P2": 10,
    ":P3": 1,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers mysql sql tagged template 1`] = `
{
  "statements": [
    "insert into Post(id, text) values(:P0, :P1)",
    "select * from Post where id = :P2",
  ],
  "variableMap": {
    ":P0": "adb626eb-4ce5-452a-a917-3943a37f202b",
    ":P1": "hello world",
    ":P2": "adb626eb-4ce5-452a-a917-3943a37f202b",
  },
  "variableTypeHintMap": {
    ":P0": "UUID",
  },
}
`;

exports[`rds resolvers mysql type hints 1`] = `
{
  "statements": [
    "SELECT * FROM \`UserGroup\` WHERE (\`id\` = :P0) AND (\`started\` < :P1)",
  ],
  "variableMap": {
    ":P0": "1232",
    ":P1": "2022-03-02T00:00:00.000Z",
  },
  "variableTypeHintMap": {
    ":P0": "UUID",
    ":P1": "TIMESTAMP",
  },
}
`;

exports[`rds resolvers mysql update 1`] = `
{
  "statements": [
    "UPDATE \`persons\` SET \`name\` = :P0, \`birthday\` = :P1, \`country\` = :P2 WHERE \`id\` = :P3",
  ],
  "variableMap": {
    ":P0": "name",
    ":P1": "today",
    ":P2": "home",
    ":P3": "abc123",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers postgresql insert 1`] = `
{
  "statements": [
    "INSERT INTO "persons" ("name") VALUES (:P0) RETURNING *",
  ],
  "variableMap": {
    ":P0": "test",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers postgresql json functions in raw string 1`] = `
{
  "statements": [
    "UPDATE "document" set "data" = jsonb_set("data", '{key}', '"value" WHERE id = adb626eb-4ce5-452a-a917-3943a37f202b",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers postgresql raw string 1`] = `
{
  "statements": [
    "UPDATE "document" set "data" = 10 WHERE id = adb626eb-4ce5-452a-a917-3943a37f202b",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers postgresql remove 1`] = `
{
  "statements": [
    "DELETE FROM "persons" WHERE "id" = :P0 RETURNING "id", "name"",
  ],
  "variableMap": {
    ":P0": "1232",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers postgresql select 1`] = `
{
  "statements": [
    "SELECT "id", "name" FROM "UserGroup" WHERE ("name" = :P0) OR ("id" > :P1) ORDER BY "name" ASC, "id" DESC LIMIT :P2 OFFSET :P3",
  ],
  "variableMap": {
    ":P0": "Stephane",
    ":P1": 10,
    ":P2": 10,
    ":P3": 1,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers postgresql sql tagged template 1`] = `
{
  "statements": [
    "insert into Post(id, text) values(:P0, :P1)",
    "select * from Post where id = :P2",
  ],
  "variableMap": {
    ":P0": "adb626eb-4ce5-452a-a917-3943a37f202b",
    ":P1": "hello world",
    ":P2": "adb626eb-4ce5-452a-a917-3943a37f202b",
  },
  "variableTypeHintMap": {
    ":P0": "UUID",
  },
}
`;

exports[`rds resolvers postgresql type hints 1`] = `
{
  "statements": [
    "SELECT * FROM "UserGroup" WHERE ("id" = :P0) AND ("started" < :P1)",
  ],
  "variableMap": {
    ":P0": "1232",
    ":P1": "2022-03-02T00:00:00.000Z",
  },
  "variableTypeHintMap": {
    ":P0": "UUID",
    ":P1": "TIMESTAMP",
  },
}
`;

exports[`rds resolvers postgresql update 1`] = `
{
  "statements": [
    "UPDATE "persons" SET "name" = :P0, "birthday" = :P1, "country" = :P2 WHERE "id" = :P3",
  ],
  "variableMap": {
    ":P0": "name",
    ":P1": "today",
    ":P2": "home",
    ":P3": "abc123",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers toJsonObject 1`] = `
[
  [
    {
      "ISBN-13": "978-1948132817",
      "author": "Mark Twain",
      "title": "Adventures of Huckleberry Finn",
    },
    {
      "ISBN-13": "978-1948132275",
      "author": "Jack London",
      "title": "The Call of the Wild",
    },
  ],
]
`;

exports[`rds resolvers toJsonObject insert or update 1`] = `
[
  [
    {},
  ],
]
`;

exports[`rds resolvers toJsonObject update and select 1`] = `
[
  [
    {},
  ],
  [
    {
      "ISBN-13": "978-1948132817",
      "author": "Mark Twain",
      "title": "Adventures of Huckleberry Finn",
    },
    {
      "ISBN-13": "978-1948132275",
      "author": "Jack London",
      "title": "The Call of the Wild",
    },
  ],
]
`;

exports[`rds resolvers typehints TIMESTAMP 1`] = `
{
  "type": "TIMESTAMP",
  "value": "2023-02-01T00:00:00.000Z",
}
`;

exports[`rds resolvers typehints UUID 1`] = `
{
  "type": "UUID",
  "value": "abc123",
}
`;
